@@ -1,6 +1,8 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 import com.rarchives.ripme.ripper.rippers.KingcomixRipper;
@@ -13,14 +15,14 @@ public class KingcomixRipperTest extends RippersTest {
 
     @Test
     @Disabled("test or ripper broken")
-    public void testRip() throws IOException {
-        KingcomixRipper ripper = new KingcomixRipper(new URL("https://kingcomix.com/aunt-cumming-tracy-scops/"));
+    public void testRip() throws IOException, URISyntaxException {
+        KingcomixRipper ripper = new KingcomixRipper(new URI("https://kingcomix.com/aunt-cumming-tracy-scops/").toURL());
         testRipper(ripper);
     }
 
     @Test
-    public void testGetGID() throws IOException {
-        URL url = new URL("https://kingcomix.com/aunt-cumming-tracy-scops/");
+    public void testGetGID() throws IOException, URISyntaxException {
+        URL url = new URI("https://kingcomix.com/aunt-cumming-tracy-scops/").toURL();
         KingcomixRipper ripper = new KingcomixRipper(url);
         Assertions.assertEquals("aunt-cumming-tracy-scops", ripper.getGID(url));
     }
