@@ -1,7 +1,9 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
+
 import com.rarchives.ripme.ripper.rippers.ListalRipper;
 import org.junit.jupiter.api.Test;
 
@@ -11,9 +13,9 @@ public class ListalRipperTest extends RippersTest {
      * Test for list type url.
      */
     @Test
-    public void testPictures() throws IOException {
+    public void testPictures() throws IOException, URISyntaxException {
         ListalRipper ripper =
-                new ListalRipper(new URL("https://www.listal.com/emma-stone_iii/pictures"));
+                new ListalRipper(new URI("https://www.listal.com/emma-stone_iii/pictures").toURL());
         testRipper(ripper);
     }
 
@@ -21,9 +23,9 @@ public class ListalRipperTest extends RippersTest {
      * Test for list type url.
      */
     @Test
-    public void testRipListType() throws IOException {
+    public void testRipListType() throws IOException, URISyntaxException {
         ListalRipper ripper =
-                new ListalRipper(new URL("https://www.listal.com/list/evolution-emma-stone"));
+                new ListalRipper(new URI("https://www.listal.com/list/evolution-emma-stone").toURL());
         testRipper(ripper);
     }
 
@@ -31,9 +33,9 @@ public class ListalRipperTest extends RippersTest {
      * Test for folder type url.
      */
     @Test
-    public void testRipFolderType() throws IOException {
+    public void testRipFolderType() throws IOException, URISyntaxException {
         ListalRipper ripper =
-                new ListalRipper(new URL("https://www.listal.com/chet-atkins/pictures"));
+                new ListalRipper(new URI("https://www.listal.com/chet-atkins/pictures").toURL());
         testRipper(ripper);
     }
 
